<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.tip.theboss.ui.login.LoginView" />
    </data>

    <FrameLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.tip.theboss.ui.login.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:fontFamily="sans-serif"
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> view.onLogin()}"
                    android:text="@string/login"
                    android:theme="@style/RaisedButton" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-condensed"
            android:onClick="@{() -> view.onRegister()}"
            android:text="@string/register_hint"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </FrameLayout>

</layout>
